--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
 
-    - run: apt update && apt install xorg-dev libxcb-shape0-dev libxcb-xfixes0-dev
+    - run: apt update && apt install -y xorg-dev libxcb-shape0-dev libxcb-xfixes0-dev
 
     - uses: actions/checkout@v3
       with:
