--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,8 +18,6 @@ jobs:
 
     steps:
 
-#    - run: apt update && apt install -y xorg-dev libxcb-shape0-dev libxcb-xfixes0-dev
-
     - uses: actions/checkout@v3
       with:
         repository: zee-editor/zee
@@ -31,7 +29,7 @@ jobs:
       with:
         key: v2
 
-    - run: cargo build --all-features --release
+    - run: cargo build --release
       
     - uses: actions/upload-artifact@v3.0.0
       with:
